--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="styles/main.css" />
   <title>Web II 2022</title>
 </head>
 <body>
-  <main>
-    <h1>Hi class!</h1>
+  <header class="navigation">
+    <div>The Brand</div>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/">About</a>
+      <a href="/">Contact</a>
+    </nav>
+  </header>
+  
+  <main class="container">
+    <h1>The Place</h1>
+    <button>Order</button>
   </main>
+  <button class="orange-btn">I'm orange button</button>
   
 </body>
 </html>
