--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/main.css" />
-  <title>Web II 2022</title>
+  <link rel="stylesheet" href="styles/main.css">
+
+  <title>Document</title>
 </head>
 <body>
-  <header class="navigation">
-    <div>The Brand</div>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/">About</a>
-      <a href="/">Contact</a>
-    </nav>
-  </header>
-  
-  <main class="container">
-    <h1>The Place</h1>
-    <button>Order</button>
-  </main>
-  <button class="orange-btn">I'm orange button</button>
-  
+  <a href="contact.html">Contact Me</a>
+
+  <div class="content" id="paragraph">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt perferendis aperiam soluta vel esse architecto iusto. Saepe debitis iusto qui nostrum temporibus obcaecati, deserunt officia, vitae magnam sint veniam pariatur?
+  </div>
+
+  <div id="count">1</div>
+
+  <button id="main-btn">Show/Hide</button>
+  <!-- <button id="btn-remove">Remove</button> -->
+
+
+
+  <script src="js/script.js"></script>
 </body>
 </html>
